python/michelangelo/cli/sandbox/demo/inference/deployment.yaml
apiVersion: michelangelo.api/v2
kind: Deployment
metadata:
  name: deployment-example
  namespace: default
spec:
  desiredRevision:
    name: bert-cola-37
    namespace: default
  inferenceServer:
    name: inference-server-example
  strategy:
    rolling: {}
