python/michelangelo/cli/sandbox/demo/inference/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-routing-rule
  namespace: default # Should match the namespace of your Service
spec:
  parentRefs:
  - name: ma-gateway # The name of your Istio Gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    backendRefs:
    - name: inference-server-example-inference-service # Your ExternalName Service
      kind: Service
      port: 8080 # The port defined in your ExternalName/ServiceEntry
