python/michelangelo/cli/sandbox/demo/inference/httproute_dynamo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dynamo-inference-httproute
  namespace: default
  labels:
    app.kubernetes.io/name: michelangelo-dynamo
    app.kubernetes.io/component: traffic-routing
  annotations:
    michelangelo.ai/inference-server: dynamo-inference-server
    michelangelo.ai/model: Qwen/Qwen3-0.6B
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ma-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dynamo-deployment
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1
      backendRefs:
        - group: ""
          kind: Service
          name: dynamo-dynamo-inference-server-frontend
          port: 8000
