python/michelangelo/cli/sandbox/demo/inference/httproute_extername.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-server-example-multicluster
  namespace: default
spec:
  parentRefs:
    - name: ma-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /inference-server-example
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: inference-server-example-inference-bridge
          port: 80
